Fix 'discuss' link shifting when button text changes.

--- a/reddit_donate/public/static/css/donate.less
+++ b/reddit_donate/public/static/css/donate.less
@@ -379,7 +379,7 @@ a {
 
     .discuss-link {
       display: block;
-      text-align: center;
+      text-align: right;
       margin-top: (@margin-small * 1px);
     }
   }
